[package]
name = "cutlass-gemm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CUTLASS 3.x BF16/F32 GEMM CUDA kernels for SM80+. No cuBLAS / libtorch dependency; compiled directly from upstream cutlass headers."
repository = "https://github.com/NVIDIA/cutlass"

[lib]
name = "cutlass_gemm"
path = "src/lib.rs"

[dev-dependencies]
cudarc = { version = "0.19.4", features = ["std", "cuda-version-from-build-system", "f16", "cublas", "cublaslt"] }
half = "2.7.1"
float8 = "0.7.0"
rand = "0.10.0"

[build-dependencies]
