[package]
name = "flash-attn-v4"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Rust bindings to Flash Attention v4 (CuTeDSL AOT) CUDA kernels. Statically linked, no libtorch dependency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dao-AILab/flash-attention"

[lib]
name = "flash_attn_v4"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tvm-static-ffi = { workspace = true }

[build-dependencies]
prelude-kernelbuild = { workspace = true }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
half = "2"
