[package]
name = "prelude-flashinfer"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "FlashInfer AOT kernels for Prelude inference engine."
license = "MIT OR Apache-2.0"

[lib]
name = "prelude_flashinfer"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
prelude-tvm-ffi = { path = "../tvm-ffi" }

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cc = "1"
sha2 = "0.10"
hex = "0.4"
