[package]
name = "flashinfer"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Rust bindings to flashinfer-ai's FlashInfer AOT attention/sampling CUDA kernels. Statically linked, no libtorch dependency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/flashinfer-ai/flashinfer"

[lib]
name = "flashinfer"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tvm-static-ffi = { workspace = true }

[build-dependencies]
prelude-kernelbuild = { workspace = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
