[package]
name = "quant-gemm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GPU quantized matrix multiply for GGUF weight formats. Vendored from llama.cpp, exposes tiled MMQ (prefill) and MMVQ (decode) through a thin Rust FFI."
repository = "https://github.com/ggml-org/llama.cpp"

[lib]
name = "quant_gemm"
path = "src/lib.rs"

[dependencies]
cudarc = { version = "0.19.4", features = ["std", "cuda-version-from-build-system", "f16"] }
half = "2.7.1"

[dev-dependencies]
rand = "0.10.0"
